--- a/store/index.html
+++ b/store/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1 id="mensaje"></h1>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+    <script src="productos.js"></script>
 </body>
 
 </html>
