--- a/calculator/index.html
+++ b/calculator/index.html
@@ -8,8 +8,15 @@
 </head>
 
 <body>
-    <h1 id="mensaje"></h1>
-    <script src="index.js"></script>
+    <input type="text" id="inputValue" placeholder="Enter a number">
+    <button id="addButton">Add</button>
+    <button id="subtractButton">Subtract</button>
+    <button id="multiplyButton">Multiply</button>
+    <button id="divideButton">Divide</button>
+    <button id="clearButton">Clear</button>
+
+    <!-- Conectar calculator.js -->
+    <script src="calculator.js"></script>
 </body>
 
 </html>
