--- a/store/index.html
+++ b/store/index.html
@@ -9,8 +9,9 @@
 
 <body>
     <h1 id="mensaje"></h1>
-    <!-- <script src="index.js"></script> -->
-    <script src="productos.js"></script>
+    <!-- <script src="./index.js"></script> -->
+    <script src="./products1.js"></script>
+
 </body>
 
 </html>
