--- a/example/index.html
+++ b/example/index.html
@@ -10,10 +10,13 @@
 
 <body>
     <h1 id="mensaje"></h1>
-    <!-- <script src="./scripts/lengthOf.js"></script> -->
-    <!-- <script src="./scripts/titleFormat.js"></script> -->
-    <!-- <script src="./scripts/stringIncludes.js"></script> -->
-    <script src="./scripts/palindrome.js"></script>
+    <!-- <script src="./scripts/index.js"></script> 
+    <script src="./scripts/lengthOf.js"></script>
+    <script src="./scripts/titleFormat.js"></script> 
+    <script src="./scripts/stringIncludes.js"></script>
+    <script src="./scripts/palindrome.js"></script>-->
+    <script src="./scripts/math.js"></script>
+
 </body>
 
 </html>
